--- a/vimwiki/学习笔记/Android/标准时间取得毫秒.wiki
+++ b/vimwiki/学习笔记/Android/标准时间取得毫秒.wiki
@@ -1,10 +1,11 @@
 = 从1970年1月1日经过的毫秒数 =
 
-调用java.lang.System类。
+%toc
 
+- 调用java.lang.System类。
 - 调用System.currentTimeMillis()方法，可以取得从1970年1月1日开始经过的毫秒数。
 
-例程源码(Java)
+== 例程源码(Java) ==
 {{{class="brush:java"
 long currentTimeMillis = System.currentTimeMillis();
 Log.v("Test", String.valueOf(currentTimeMillis));
