--- a/vimwiki/学习笔记/Android/自定义Activity窗口.wiki
+++ b/vimwiki/学习笔记/Android/自定义Activity窗口.wiki
@@ -56,7 +56,7 @@ public class FloatActivityDemo extends Activity {
     @Override
     public void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
-        //先去除应用程序标题栏  注意：一定要在setContentView之前
+        //先去除应用程序标题栏。注意：一定要在setContentView之前
         requestWindowFeature(Window.FEATURE_NO_TITLE);
         //将我们定义的窗口设置为默认视图
         setContentView(R.layout.float_activity);
