--- a/vimwiki/学习笔记/Android/Parcel对象.wiki
+++ b/vimwiki/学习笔记/Android/Parcel对象.wiki
@@ -68,14 +68,23 @@ String s = parcel.readString();
 - 从Parcelable类继承，并实现`Parcelable.Creator接口`和`writeToParcel`方法
 
 == 示例代码 ==
+=== 自定义的Parcelable对象 ===
 {{{class="brush:java"
 public class MyParcelable implements Parcelable {
 
     private int mData;
+    private String mName;
+    private ArrayList<Person> mMember;
 
     // 构造方法
     private MyParcelable(Parcel in) {
+        // 默认支持读取原始数据类型
         mData = in.readInt();
+        mName = in.readString();
+        
+        // 如果是对象列表，则需要使用readTypedList方法读出，并且对象Person也需要实现Parcelable接口
+        mMember = new ArrayList<Person>();
+        in.readTypedList(mMember, Person.CREATOR);
     }
 
     // 实现Creator接口，Creator<T>接收该类作为参数
@@ -87,7 +96,7 @@ public class MyParcelable implements Parcelable {
             return new MyParcelable(in);
         }
 
-        // 创建数据类型
+        // 提供创建数组类型的方法
         public MyParcelable[] newArray(int size) {
             return new MyParcelable[size];
         }
@@ -99,7 +108,24 @@ public class MyParcelable implements Parcelable {
  
     // 在该方法中通过out写入数据
     public void writeToParcel(Parcel out, int flags) {
+        // 默认支持写入原始数据类型
         out.writeInt(mData);
+        out.writeString(mName);
+        
+        // 写入对象，需要该对象也实现Parcelable接口
+        out.writeTypedList(mMember);
     }
+}
+}}}
+
+=== 传递Parcelable对象 ===
+{{{class="brush:java"
+private void sendIntentWithData(MyParcelable data) {
+    Intent it = new Intent(PhotosMainActivity.this,
+            PhotosCoverFlowActivity.class);
+    Bundle bundle = new Bundle();
+    bundle.putParcelable(KEY_BUNDLE_ALBUM, data);
+    it.putExtra(KEY_EXTRA_DATA, bundle);
+    startActivity(it);
 }
 }}}
