Force commit by sync_github.sh

--- a/vimwiki/学习笔记/Python/内置数据类型.wiki
+++ b/vimwiki/学习笔记/Python/内置数据类型.wiki
@@ -11,6 +11,9 @@
 >>> a_list 
 ['a', 'b', 'mpilgrim', 'z', 'example'] 
 
+>>> a_list[::-1]
+['example', 'z', 'mpilgrim', 'b', 'a'] 
+
 >>> a_list[1:3] 
 ['b', 'mpilgrim'] 
 
