--- a/vimwiki/学习笔记/index.wiki
+++ b/vimwiki/学习笔记/index.wiki
@@ -17,6 +17,7 @@
     - [[Java/Java学习笔记|Java学习笔记]] ------------------------------ _记录学习Java的一些要点和心得_
     - [[Android/Android学习笔记|Android学习笔记]] ------------------------ _Android的安装,编译及使用心得_
     - [[Web/Web开发|Web开发]] ------------------------ _记录Web相关的技术与经验_
+    - [[机器视觉/机器视觉学习笔记|机器视觉学习笔记]] ------------------------ _记录机器视觉相关的要点_
 
 ----
 
