Force commit by sync_github.sh

--- a/vimwiki/学习笔记/index.wiki
+++ b/vimwiki/学习笔记/index.wiki
@@ -52,3 +52,4 @@
     %% - [[diary/diary|个人日记]]   ------------------------------------ _个人日记_
     - [[blog/blog|我的文章]] ------------------------------------ _记录了学习和生活中的想法和感悟_
     - [[网址|一些有用的网址]]    ------------------------------------ 网址
+    - [[Math/Math|Math]]
