--- a/vimwiki/学习笔记/机器视觉/机器视觉学习笔记.wiki
+++ b/vimwiki/学习笔记/机器视觉/机器视觉学习笔记.wiki
@@ -2,12 +2,7 @@
 
 %toc
 
-== 相机标定原理 ==
-{{http:pic/1.jpeg}}
-{{http:pic/2.jpeg}}
-{{http:pic/3.jpeg}}
-{{http:pic/4.jpeg}}
-{{http:pic/5.jpeg}}
-{{http:pic/6.jpeg}}
-{{http:pic/7.jpeg}}
-{{http:pic/8.jpeg}}
+- [[相机标定原理]]
+- [[Opencv Tips]]
+
+
