Force commit by sync_github.sh

--- a/vimwiki/学习笔记/Python/内置函数.wiki
+++ b/vimwiki/学习笔记/Python/内置函数.wiki
@@ -317,3 +317,15 @@ print("%.*f" % (4, 1.2))    # 1.2000
 >>> mi
 {1: 'a', 2: 'b', 3: 'c', 4: 'd'}
 }}}
+
+== repr ==
+- 返回对象的字符串表示。
+{{{class="brush:python"
+>>> a = 'hello'
+>>> repr(a)
+>>> "'hello'"
+
+>>> b = 1
+>>> repr(b)
+>>> '1'
+}}}
