--- a/vimwiki/学习笔记/Python/内置数据类型.wiki
+++ b/vimwiki/学习笔记/Python/内置数据类型.wiki
@@ -239,6 +239,21 @@ slice(1, -1, 1)
 >>> m = collections.OrderedDict((str(x), x) for x in range(10, 0, -1))
 >>> print ', '.join(m.keys())
 10, 9, 8, 7, 6, 5, 4, 3, 2, 1
+
+# regular unsorted dictionary
+>>> d = {'banana': 3, 'apple':4, 'pear': 1, 'orange': 2}
+
+# 按key排序
+>>> OrderedDict(sorted(d.items(), key=lambda t: t[0]))
+OrderedDict([('apple', 4), ('banana', 3), ('orange', 2), ('pear', 1)])
+
+# 按值排序
+>>> OrderedDict(sorted(d.items(), key=lambda t: t[1]))
+OrderedDict([('pear', 1), ('orange', 2), ('banana', 3), ('apple', 4)])
+
+# 按key长度排序
+>>> OrderedDict(sorted(d.items(), key=lambda t: len(t[0])))
+OrderedDict([('pear', 1), ('apple', 4), ('orange', 2), ('banana', 3)])
 }}}
 
 === 缺省字典 ===
